--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>test</title>
+    <title>project-1</title>
   </head>
   <body>
     <header></header>
